<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RadioGroup
        android:id="@+id/textSizeRadioGroup"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RadioButton
            android:text="@string/tiny"
            android:padding="16dp"
            android:id="@+id/tiny_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:background="#20000000"
            android:layout_width="match_parent"
            android:layout_height="0.2dp"/>


        <RadioButton
            android:checked="true"
            android:text="@string/small"
            android:padding="16dp"
            android:id="@+id/small_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:background="#20000000"
            android:layout_width="match_parent"
            android:layout_height="0.2dp"/>

        <RadioButton
            android:checked="false"
            android:text="@string/medium"
            android:padding="16dp"
            android:id="@+id/meidum_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:background="#20000000"
            android:layout_width="match_parent"
            android:layout_height="0.2dp"/>

        <RadioButton
            android:text="@string/large"
            android:padding="16dp"
            android:id="@+id/large_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:background="#20000000"
            android:layout_width="match_parent"
            android:layout_height="0.2dp"/>

        <RadioButton
            android:text="@string/extra_large"
            android:padding="16dp"
            android:id="@+id/extra_large_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



    </RadioGroup>


    </LinearLayout>



