<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:textSize="16sp"
        android:textColor="#000"
        android:gravity="center"
        android:padding="16dp"
        android:text="Choose News Language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <RadioGroup
        android:id="@+id/langRadioGroup"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:text="@string/lang_or"
            android:padding="16dp"
            android:id="@+id/or_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:background="#20000000"
            android:layout_width="match_parent"
            android:layout_height="0.2dp"/>


        <RadioButton
            android:text="@string/lang_ti"
            android:padding="16dp"
            android:id="@+id/ti_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:background="#20000000"
            android:layout_width="match_parent"
            android:layout_height="0.2dp"/>

        <RadioButton
            android:checked="true"
            android:text="@string/lang_am"
            android:padding="16dp"
            android:id="@+id/am_raido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:background="#20000000"
            android:layout_width="match_parent"
            android:layout_height="0.2dp"/>

        <RadioButton
            android:text="@string/lang_en"
            android:padding="16dp"
            android:id="@+id/en_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:background="#20000000"
            android:layout_width="match_parent"
            android:layout_height="0.2dp"/>

    </RadioGroup>

</LinearLayout>



